- Improved: Moved multilingual support to its own extension "isotope_multilingual" with lot more options
- Improved: Hide payment information if checkout total is 0
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Improved: Authorize.net failed transaction response handling & log data

Version 0.2.4 (2011-01-??)
------------------------------
- Fixed weight total shipping included rates from all shipping modules
- Fixed mandatory asterisks not appearing in checkout address fields
- Fixed email issues with mail clients not supporting <tfood>
- Fixed missing comma in mail text (Ticket #217)
- Improved italian address formatting (Ticket #305)

Version 0.2.3 (2010-12-20)
------------------------------
- Added hooks for altering taxes
- Added guest and member group restrictions on payment modules
- Added product type restrictions on shipping modules
- Added "check all" in product quick edit (Ticket #294)
- Fixed countries bug in checkout
- Fixed language files still containing search label
- Fixed address field translation in mails
- Fixed allowed number of downloads, was not multiplicated by the number of purchases
- Fixed download availability check bugs
- Fixed jumpTo in related product list
- Fixed division by zero error message in product list
- Fixed mail templates, parseSimpleTokens stripped important HTML tags
- Fixed SQL error when adding new category to a product (Ticket #299)
- Fixed bug in rule calculation for each product quantity
- Fixed order history not showing discount price
- Dropped italian regions (Ticket #305)

Version 0.2.2 (2010-12-05)
------------------------------
- Attempt to fix the checkout problem

Version 0.2.1 (2010-12-04)
------------------------------
- Fixed allowed country comparison for billing & shipping countries (Ticket #279)

Version 0.2.0 (2010-12-02)
------------------------------
- Added label for isotope_rules extension folder