@@ -70,16 +70,12 @@ abstract class ContentIsotope extends ContentElement
 	{
 		global $objPage;
 		
-		$objProductData = $this->Database->prepare("SELECT *, (SELECT class FROM tl_iso_producttypes WHERE tl_iso_products.type=tl_iso_producttypes.id) AS product_class FROM tl_iso_products WHERE pid=$intId OR id=$intId")
-										 ->limit(1)
-										 ->executeUncached();
+		$objProductData = $this->Database->execute("SELECT *, (SELECT class FROM tl_iso_producttypes WHERE tl_iso_products.type=tl_iso_producttypes.id) AS product_class FROM tl_iso_products WHERE id=$intId");
 									 
 		$strClass = $GLOBALS['ISO_PRODUCT'][$objProductData->product_class]['class'];
 		
-		if (!$this->classFileExists($strClass))
-		{
+		if ($strClass == '' || !$this->classFileExists($strClass))
 			return null;
-		}
 									
 		$objProduct = new $strClass($objProductData->row());
 		
@@ -105,10 +101,8 @@ abstract class ContentIsotope extends ContentElement
 									 
 		$strClass = $GLOBALS['ISO_PRODUCT'][$objProductData->product_class]['class'];
 		
-		if (!$this->classFileExists($strClass))
-		{
+		if ($strClass == '' || !$this->classFileExists($strClass))
 			return null;
-		}
 		
 		$objProduct = new $strClass($objProductData->row());
 		
@@ -124,19 +118,32 @@ abstract class ContentIsotope extends ContentElement
 	/**
 	 * Retrieve multiple products by ID.
 	 */
-	protected function getProducts($arrIds, $blnCheckAvailability=true)
+	protected function getProducts($arrIds, $blnCheckAvailability=true, $intLimit=0, $intOffset=0)
 	{
 		if (!is_array($arrIds) || !count($arrIds))
 			return array();
 		
+		$total = 0;
 		$arrProducts = array();
 		
 		foreach( $arrIds as $intId )
 		{
+			if ($intLimit > 0 && $total >= $intLimit)
+				break;
+			
 			$objProduct = $this->getProduct($intId, $blnCheckAvailability);
 		
 			if (is_object($objProduct))
+			{
+				if ($intOffset > 0)
+				{
+					--$intOffset;
+					continue;
+				}
+				
 				$arrProducts[] = $objProduct;
+				++$total;
+			}
 		}
 		
 		return $arrProducts;
