@@ -18,6 +18,7 @@ Version 0.3.beta1
 
 Version 0.2.4 (2011-01-??)
 ------------------------------
+- Updated ContentIsotope methods to match ModuleIsotope methods (Ticket #290)
 - Fixed weight total shipping included rates from all shipping modules
 - Fixed mandatory asterisks not appearing in checkout address fields
 - Fixed email issues with mail clients not supporting <tfood>
